fixed breadcrumb misalignment with chevron

--- a/frontend/src/core/less/_reset.less
+++ b/frontend/src/core/less/_reset.less
@@ -12,9 +12,13 @@ ul li {margin-left:20px;}
 ol li {
     margin-left: 20px;
 }
-ol.breadcrumbs-list li {
-    margin-left: 0;
-    /* or whatever value you want for breadcrumbs-list */
+ol.breadcrumbs-list {
+    display: flex;
+    align-items: center;
+    li {
+        margin-left: 0;
+        /* or whatever value you want for breadcrumbs-list */
+    }
 }
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after, q:before,
